[package]
name = "jutge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web-client"]
web-client = ["dep:ureq"]

[dependencies]
ureq = { version = "2.5", features = ["cookies"], optional = true }
thiserror = "1.0.35"
